<resources>
    <string name="app_name">Laundry Management</string>
    <string name="title_home">Home</string>
    <string name="title_searchuser">Search User</string>
    <string name="title_laundaryreceived">Received</string>
    <string name="title_pricelist">Price List</string>
    <string name="title_settings">Settings</string>
    <string name="student_name">Name</string>
    <string name="student_room_no">Room No.</string>
    <string name="noreq">No Requests</string>
    <string name="add">Add</string>
    <string name="particular">Particular</string>
    <string name="unit">Unit (Eg:Per Pair)</string>
    <string name="rate">Rate (in Rs)</string>
    <string name="add_particular">Add Particular</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
</resources>