<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_in_price_list_Activity"
    android:background="@color/white"
    >



    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/add_particular"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/partiicular"
        style="@style/OutlinedRoundedBox"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/particular"
            android:paddingLeft="10dp"
            android:id="@+id/partiicularet"
            android:inputType="text"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/unit"
        style="@style/OutlinedRoundedBox"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/partiicular">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/unit"
            android:paddingLeft="10dp"
            android:id="@+id/unitet"
            android:text=""
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/rate"
        style="@style/OutlinedRoundedBox"
        android:layout_width="276dp"
        android:layout_height="58dp"
        android:layout_marginBottom="140dp"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/unit"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/rate"
            android:paddingLeft="10dp"
            android:id="@+id/rateet"
            android:inputType="numberDecimal"
            android:text=""
            tools:ignore="SpeakableTextPresentCheck"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/OutlinedRoundedBox"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:id="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate"
        app:layout_constraintVertical_bias="0.212" />
    <Button
        style="@style/OutlinedRoundedBox"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:id="@+id/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submit"
        app:layout_constraintVertical_bias="0.212"
        android:layout_marginBottom="120dp"/>
    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>